--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,23 +5,35 @@
         AED 리스트
     </p>
   </aside>
-        <div class="row">
-        <div class="col-3"></div>
-        <div class="col-9">
-          <div class="" id="map" style="width: 100%; height: 650px;"></div>
-        </div>
+    <div class="" id="map" style="width: 100%; height: 650px;"></div>
 
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=12ec7761cdcbdba51ef2a95cd771f87b"></script>
 
 <script type="text/javascript">
-  var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
-  var options = { //지도를 생성할 때 필요한 기본 옵션
-	   center: new daum.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
-	   level: 3 //지도의 레벨(확대, 축소 정도)
-};
+function getLocation() {
+if (navigator.geolocation) { // GPS를 지원하면
+  navigator.geolocation.getCurrentPosition(function(position) {
+    alert(position.coords.latitude + ' ' + position.coords.longitude);
+    var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+    var options = { //지도를 생성할 때 필요한 기본 옵션
+       center: new daum.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
+       level: 3 //지도의 레벨(확대, 축소 정도)
+  };
 
-  var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴
+    var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴
+  }, function(error) {
+    console.error(error);
+  }, {
+    enableHighAccuracy: false,
+    maximumAge: 0,
+    timeout: Infinity
+  });
+} else {
+  alert('GPS를 지원하지 않습니다');
+}
+}
+getLocation();
 
 
 </script>
