--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,23 +12,34 @@
 <script type="text/javascript">
 $(document).ready(function() {
   console.log("ok");
-  getLocation();
+  //getLocation();
+  tryGeolocation();
 });
 
 
+var apiGeolocationSuccess = function(position) {
+    alert("API geolocation success!\n\nlat = " + position.coords.latitude + "\nlng = " + position.coords.longitude);
+};
 
-function getLocation() {
+var tryAPIGeolocation = function() {
+    jQuery.post( "https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyDCa1LUe1vOczX1hO_iGYgyo8p_jYuGOPU", function(success) {
+        apiGeolocationSuccess({coords: {latitude: success.location.lat, longitude: success.location.lng}});
+    })
+    .fail(function(err) {
+        alert("API Geolocation error! \n\n"+err);
+    });
+};
 
-  if (navigator.geolocation) { // GPS를 지원하면
+var browserGeolocationSuccess = function(position) {
+    //alert("Browser geolocation success!\n\nlat = " + position.coords.latitude + "\nlng = " + position.coords.longitude);
     var url='http://apis.data.go.kr/B552657/AEDInfoInqireService/getAedLcinfoInqire';
     var queryParams='?'+encodeURIComponent('ServiceKey')+'='+'gJ%2FGBmwaviWrn8ZSx0eOt745BOy5J51ZReBd%2F44r73veUNOjqE0vgQhfleuV7WuU5%2Bos3IuLV5tivlhQ99eO1A%3D%3D';
-    navigator.geolocation.getCurrentPosition(function(position) {
     //  alert(position.coords.latitude + ' ' + position.coords.longitude);
-      var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
-      var options = { //지도를 생성할 때 필요한 기본 옵션
-        center: new daum.maps.LatLng(position.coords.latitude, position.coords.longitude), //지도의 중심좌표.
-        level: 5 //지도의 레벨(확대, 축소 정도)
-      };
+    var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+    var options = { //지도를 생성할 때 필요한 기본 옵션
+      center: new daum.maps.LatLng(position.coords.latitude, position.coords.longitude), //지도의 중심좌표.
+      level: 5 //지도의 레벨(확대, 축소 정도)
+    };
       var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴
       queryParams+='&'+encodeURIComponent('WGS84_LON')+'='+position.coords.longitude+'&'+encodeURIComponent('WGS84_LAT')+'='+position.coords.latitude;
       queryParams+='&'+encodeURIComponent('pageNo')+'='+'1';
@@ -57,18 +68,36 @@ function getLocation() {
          }
       });
 
-    }, function(error) {
-      
-    }, {
-      enableHighAccuracy: false,
-      maximumAge: 0,
-      timeout: Infinity
-    });
+ 
+};
 
-  } else {
-  alert('이 브라우저는 GPS를 지원하지 않습니다');
-  }
-}
+var browserGeolocationFail = function(error) {
+    switch (error.code) {
+        case error.TIMEOUT:
+            alert("Browser geolocation error !\n\nTimeout.");
+            break;
+        case error.PERMISSION_DENIED:
+            if(error.message.indexOf("Only secure origins are allowed") == 0) {
+                tryAPIGeolocation();
+            }
+            break;
+        case error.POSITION_UNAVAILABLE:
+            alert("Browser geolocation error !\n\nPosition unavailable.");
+            break;
+    }
+};
+
+var tryGeolocation = function() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(
+                browserGeolocationSuccess,
+                browserGeolocationFail,
+                {maximumAge: 50000, timeout: 20000, enableHighAccuracy: true});
+    }
+};
+
+
+
 
 
 
