--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,64 +11,24 @@
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8a946d5de2f30f417d4252aa4cef341e"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-  console.log("ok");
-  //getLocation();
-  tryGeolocation();
-});
-var apiGeolocationSuccess = function(position) {
-    alert("API geolocation success!\n\nlat = " + position.coords.latitude + "\nlng = " + position.coords.longitude);
-};
-var tryAPIGeolocation = function() {
-    jQuery.post( "https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyDCa1LUe1vOczX1hO_iGYgyo8p_jYuGOPU", function(success) {
-        apiGeolocationSuccess({coords: {latitude: success.location.lat, longitude: success.location.lng}});
-    })
-    .fail(function(err) {
-        alert("API Geolocation error! \n\n"+err);
+   if (navigator.geolocation) { // GPS를 지원하면
+    navigator.geolocation.getCurrentPosition(function(position) {
+
+      userGeolocation(position);
+    }, function(error) {
+      console.error(error);
+    }, {
+      enableHighAccuracy: false,
+      maximumAge: 0,
+      timeout: Infinity
     });
-};
+  } else {
+    alert('GPS를 지원하지 않습니다');
+  }
+});
+
 var browserGeolocationSuccess = function(position) {
     //alert("Browser geolocation success!\n\nlat = " + position.coords.latitude + "\nlng = " + position.coords.longitude);
-    var url='http://apis.data.go.kr/B552657/AEDInfoInqireService/getAedLcinfoInqire';
-    var queryParams='?'+encodeURIComponent('ServiceKey')+'='+'gJ%2FGBmwaviWrn8ZSx0eOt745BOy5J51ZReBd%2F44r73veUNOjqE0vgQhfleuV7WuU5%2Bos3IuLV5tivlhQ99eO1A%3D%3D';
-    //  alert(position.coords.latitude + ' ' + position.coords.longitude);
-    var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
-    var options = { //지도를 생성할 때 필요한 기본 옵션
-      center: new daum.maps.LatLng(position.coords.latitude, position.coords.longitude), //지도의 중심좌표.
-      level: 5 //지도의 레벨(확대, 축소 정도)
-    };
-      var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴
-      queryParams+='&'+encodeURIComponent('WGS84_LON')+'='+position.coords.longitude+'&'+encodeURIComponent('WGS84_LAT')+'='+position.coords.latitude;
-      queryParams+='&'+encodeURIComponent('pageNo')+'='+'1';
-      queryParams+='&'+encodeURIComponent("numberOfRows")+'='+'1';
-      console.log(url+queryParams);
-      $.ajax({
-         url : url+queryParams,
-         type: 'get',
-         success : function(result) {
-          $(result).find("item").each(function(){
-            var lat=$(this).find("wgs84Lat").text();
-            var lon=$(this).find("wgs84Lon").text();
-            var markerPosition  = new daum.maps.LatLng(lat, lon);
-            // 마커를 생성합니다
-            var marker = new daum.maps.Marker({
-                map: map, // 마커를 표시할 지도
-                position: markerPosition // 마커를 표시할 위치
-              });
-            var content='<a href="">Button</a>' 
-
-
-            var infowindow = new daum.maps.InfoWindow({
-                content: content, // 인포윈도우에 표시할 내용
-                removable : true
-            });
-
-    // 마커에 mouseover 이벤트와 mouseout 이벤트를 등록합니다
-    // 이벤트 리스너로는 클로저를 만들어 등록합니다
-    // for문에서 클로저를 만들어 주지 않으면 마지막 마커에만 이벤트가 등록됩니다
-            daum.maps.event.addListener(marker, 'click', makeOverListener(map, marker, infowindow));
-        });
-    }
-  });
 
 };
 function makeOverListener(map, marker, infowindow) {
@@ -83,28 +43,79 @@ function makeOutListener(infowindow) {
         infowindow.close();
     };
 }
-var browserGeolocationFail = function(error) {
-    switch (error.code) {
-        case error.TIMEOUT:
-            alert("Browser geolocation error !\n\nTimeout.");
-            break;
-        case error.PERMISSION_DENIED:
-            if(error.message.indexOf("Only secure origins are allowed") == 0) {
-                tryAPIGeolocation();
-            }
-            break;
-        case error.POSITION_UNAVAILABLE:
-            alert("Browser geolocation error !\n\nPosition unavailable.");
-            break;
+function getLocation() {
+ 
+}
+function userGeolocation(position) {
+  $.ajax({
+    url: '/nearbyme',
+    type: 'post',
+    cache: false,
+    dataType: 'json',
+    data: {'lat': position.coords.latitude, 'lng': position.coords.longitude}, // 내 위치 좌표
+    success: function (data) {
+      var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+      var options = { //지도를 생성할 때 필요한 기본 옵션
+        center: new daum.maps.LatLng(position.coords.latitude, position.coords.longitude), //지도의 중심좌표.
+        level: 5 //지도의 레벨(확대, 축소 정도)
+      };
+      var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴
+      if (data.result) {
+        //console.log(data.item);
+        var myItem = JSON.parse(data.item);
+        var want= myItem.response.body.items.item;
+        for(var i=0; i<want.length; i++){
+            var output = '';
+            var lat=parseFloat(want[i].wgs84Lat._text);
+            var lon= parseFloat(want[i].wgs84Lon._text);
+             var markerPosition  = new daum.maps.LatLng(lat, lon);
+            // 마커를 생성합니다
+            var marker = new daum.maps.Marker({
+                map: map, // 마커를 표시할 지도
+                position: markerPosition // 마커를 표시할 위치
+              });
+            var content='<a href="">Button</a>' 
+            var infowindow = new daum.maps.InfoWindow({
+                content: content, // 인포윈도우에 표시할 내용
+                removable : true
+            });
+            daum.maps.event.addListener(marker, 'click', makeOverListener(map, marker, infowindow));
+        }
+        /*
+          $(data.item).each(function(){
+            var lat=$(this).find("wgs84Lat").text();
+            var lon=$(this).find("wgs84Lon").text();
+            var markerPosition  = new daum.maps.LatLng(lat, lon);
+            // 마커를 생성합니다
+            var marker = new daum.maps.Marker({
+                map: map, // 마커를 표시할 지도
+                position: markerPosition // 마커를 표시할 위치
+              });
+            var content='<a href="">Button</a>' 
+            var infowindow = new daum.maps.InfoWindow({
+                content: content, // 인포윈도우에 표시할 내용
+                removable : true
+            });
+            daum.maps.event.addListener(marker, 'click', makeOverListener(map, marker, infowindow));
+        });
+        */
+      }
+    },
+    error: function (request, status, error) {
+      console.log(error);
     }
-};
-var tryGeolocation = function() {
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(
-                browserGeolocationSuccess,
-                browserGeolocationFail,
-                {maximumAge: 50000, timeout: 20000, enableHighAccuracy: true});
-    }
-};
+  });
+}
+function makeOverListener(map, marker, infowindow) {
+    return function() {
+        infowindow.open(map, marker);
+    };
+}
+// 인포윈도우를 닫는 클로저를 만드는 함수입니다
+function makeOutListener(infowindow) {
+    return function() {
+        infowindow.close();
+    };
+}
 </script>
 <% include footer %>
